--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -20,8 +20,6 @@ $toggle: ($size + $margin*2) * 1.5;
 
 	&__menu {
 		background: white;
-		// height: $toggle;
-		// width: $toggle;
 		height: 40px;
 		width: 40px;
 		padding: 13px 0px 0px 20px;
@@ -31,7 +29,7 @@ $toggle: ($size + $margin*2) * 1.5;
 		box-shadow: 0 8px 22px rgba(0, 0, 0, 0.15);
 		transition: 1.3s cubic-bezier(0.53, 0, 0.15, 1.3);
 		&.expanded {
-			width: $toggle*7;
+			width: 650px;
 		}
 	}
 	&__burger {
