--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -1,31 +1,42 @@
 @font-face {
-	font-family: "icons";
-	font-display: swap;
-	src: url("../fonts/icons.woff") format("woff"), url("../fonts/icons.woff2#icons") format("woff2");
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;
-}
-%ic {
-	font-family: "icons";
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font-family: 'icons';
+  src:  url('..fonts/icons.eot?48dnc9');
+  src:  url('..fonts/icons.eot?48dnc9#iefix') format('embedded-opentype'),
+    url('..fonts/icons.ttf?48dnc9') format('truetype'),
+    url('..fonts/icons.woff?48dnc9') format('woff'),
+    url('..fonts/icons.svg?48dnc9#icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
-[class^="_icon-"],
-[class*=" _icon-"] {
-	&:before {
-		@extend %ic;
-		display: block;
-	}
+[class^="_icon-"]::before , [class*=" _icon-"]::before {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icons' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-._icon-f:before { content: "\EA01"; }
-._icon-feather_edit:before { content: "\EA02"; }
-._icon-Group 18:before { content: "\EA03"; }
-._icon-Group 70:before { content: "\EA04"; }
+._icon-arrow:before {
+  content: "\e900";
+}
+._icon-facebook:before {
+  content: "\e901";
+}
+._icon-google:before {
+  content: "\e902";
+}
+._icon-instagram:before {
+  content: "\e903";
+}
+._icon-twitter:before {
+  content: "\e904";
+}
