--- a/webovio/css/style.css
+++ b/webovio/css/style.css
@@ -1,6 +1,58 @@
 @charset "UTF-8";
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins: 400,400italic,500,600,700&display=swap&subset=cyrillic-ext");
+@import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap&subset=cyrillic-ext);
+
+@font-face {
+    font-family: "icons";
+  font-display: swap;
+  src: url("../fonts/icons.woff") format("woff"), url("../fonts/icons.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+    font-family: 'icons';
+  src: url("..fonts/icons.eot?48dnc9");
+  src: url("..fonts/icons.eot?48dnc9#iefix") format("embedded-opentype"), url("..fonts/icons.ttf?48dnc9") format("truetype"), url("..fonts/icons.woff?48dnc9") format("woff"), url("..fonts/icons.svg?48dnc9#icons") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="_icon-"]::before,
+[class*=" _icon-"]::before {
+  /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icons' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+._icon-arrow:before {
+    content: "\e900";
+}
+
+._icon-facebook:before {
+    content: "\e901";
+}
+
+._icon-google:before {
+    content: "\e902";
+}
+
+._icon-instagram:before {
+    content: "\e903";
+}
+
+._icon-twitter:before {
+    content: "\e904";
+}
 
 * {
     padding: 0px;
@@ -779,7 +831,7 @@ body.ie ._ibg img {
 }
 
 .header__menu.expanded {
-    width: 614.25px;
+    width: 650px;
 }
 
 .header__burger {
@@ -963,6 +1015,155 @@ body.ie ._ibg img {
 }
 */
 
+.footer {
+    margin-top: -119px;
+    background-color: #4f553d;
+}
+
+.footer__content {
+    padding: 191px 0px 36px 0px;
+}
+
+.footer__top {
+    padding: 0px 0px 52px 0px;
+    display: flex;
+    border-bottom: 1px solid #000;
+}
+
+.footer__item-top {
+    margin-right: 131px;
+}
+
+.footer__item-top:last-child {
+    margin-right: 0;
+}
+
+.footer__descr {
+    color: #b6c197;
+    line-height: 40px;
+}
+
+.footer__phone {
+    color: #fff;
+    font-weight: 700;
+}
+
+.footer__address {
+    color: #fff;
+    font-weight: 700;
+}
+
+.footer__bottom {
+    padding-top: 60px;
+}
+
+.footer__wrapper {
+    display: flex;
+}
+
+.footer__column-big {
+    flex: 0 0 52.16%;
+}
+
+.footer__column-middle {
+    flex: 0 0 47,84%;
+}
+
+.footer__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__title {
+    color: #ffffff;
+    font-weight: 600;
+    line-height: 38px;
+    text-transform: uppercase;
+    margin-bottom: 21px;
+}
+
+.footer__list {
+    padding-top: 10px;
+}
+
+.footer__item {
+    margin-bottom: 20px;
+}
+
+.footer__item:last-child {
+    margin-bottom: 0px;
+}
+
+.footer__link {
+    color: #b6c197;
+}
+
+.footer__link:hover {
+    color: #ffd723;
+}
+
+.footer__info {
+    padding-left: 110px;
+    -moz-text-align-last: left;
+    text-align-last: left;
+    border-left: 1px solid #000;
+}
+
+.footer__text {
+    max-width: 220px;
+    color: #b6c197;
+    line-height: 26px;
+    margin-bottom: 29px;
+}
+
+.footer__email {
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 38px;
+}
+
+.footer__sub-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 24px;
+}
+
+.footer__author {
+    color: #b5c096;
+    font-size: 14px;
+}
+
+.cocial-footer {
+    display: flex;
+}
+
+.cocial-footer__item {
+    margin-right: 5px;
+}
+
+.cocial-footer__link {
+    display: block;
+    width: 33px;
+    height: 33px;
+    color: #5e6648;
+    background-color: #444a34;
+    border-radius: 50%;
+    position: relative;
+}
+
+.cocial-footer__link:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.cocial-footer__link:hover {
+    color: #fff;
+    background-color: #ffd723;
+}
+
 .page {
     flex: 1 1 auto;
 }
@@ -972,6 +1173,7 @@ body.ie ._ibg img {
     display: flex;
     padding-top: 84px;
     align-items: center;
+    margin-top: -100px;
 }
 
 .main__content {
@@ -1047,7 +1249,7 @@ body.ie ._ibg img {
     min-height: 227px;
     box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.15);
     border-radius: 2px;
-    margin: -104px 0 0 auto;
+    margin: -20px 0 0 auto;
 }
 
 .company__swiper {
@@ -1118,6 +1320,10 @@ body.ie ._ibg img {
     font-size: 16px;
     font-weight: 700;
     text-decoration: underline;
+}
+
+.servise__link:hover {
+    color: #ffd723;
 }
 
 .servise__card {
@@ -1284,9 +1490,14 @@ body.ie ._ibg img {
 }
 
 .product__link {
+    display: block;
     color: #d4d6d4;
     font-weight: 700;
     text-decoration: underline;
+}
+
+.product__link:hover {
+    color: #ffd723;
 }
 
 .card {
@@ -1339,7 +1550,7 @@ body.ie ._ibg img {
 }
 
 .deation {
-    padding-top: 149px;
+    padding: 150px 0px;
 }
 
 .deation__title {
@@ -1354,10 +1565,112 @@ body.ie ._ibg img {
 
 .deation__wrapper {
     display: flex;
+    justify-content: space-between;
 }
 
 .deation__column {
     flex: 0 0 25%;
+}
+
+.deation__card {
+    border-radius: 4px;
+    transition: all 0.4s ease 0s;
+}
+
+.deation__card:hover {
+    background-color: #ffffff;
+    box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.15);
+}
+
+.card-deation {
+    max-width: 255px;
+    height: 100%;
+    padding: 27px 30px 36px 30px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-deation__title {
+    width: 183px;
+    color: #4d533c;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 34px;
+    text-transform: uppercase;
+    margin-bottom: 28px;
+}
+
+.card-deation__text {
+    max-width: 194px;
+    color: rgba(33, 56, 66, 0.6);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 60px;
+    flex: 1 1 auto;
+}
+
+.card-deation__link {
+    display: block;
+    font-weight: 700;
+    color: rgba(33, 56, 66, 0.6);
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-decoration: underline;
+    position: relative;
+}
+
+.card-deation__link:hover {
+    color: #ffd723;
+}
+
+.card-deation__link:before {
+    content: "\e900";
+    position: absolute;
+    left: -10px;
+    top: 5px;
+}
+
+.call {
+    position: relative;
+    z-index: 2;
+}
+
+.call__content {
+    max-width: 1275px;
+    box-shadow: 50px 130px 100px rgba(0, 0, 0, 0.15);
+    background-color: #fafafa;
+    padding: 70px 0px 70px 164px;
+    text-align: left;
+}
+
+.call__title {
+    max-width: 670px;
+    color: #4d533c;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 74px;
+    margin-bottom: 49px;
+}
+
+.call__link {
+    color: #d4d6d4;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.call__link:hover {
+    color: #ffd723;
+}
+
+.call__link:before {
+    content: "\e900";
+    position: absolute;
+    left: -10px;
+    top: 4px;
 }
 
 @media (min-width: 991.98px) {
