--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -18,6 +18,14 @@ $toggle: ($size + $margin*2) * 1.5;
 		align-items: center;
 	}
 
+	&__logo {
+		img {
+			max-width: 100%;
+		}
+		@media (max-width:$md2+px){
+			width: 200px;
+		}
+	}
 	&__menu {
 		background: white;
 		height: 40px;
@@ -30,6 +38,9 @@ $toggle: ($size + $margin*2) * 1.5;
 		transition: 1.3s cubic-bezier(0.53, 0, 0.15, 1.3);
 		&.expanded {
 			width: 650px;
+			@media (max-width:$md2+px){
+				width: 500px;
+			}
 		}
 	}
 	&__burger {
@@ -133,6 +144,9 @@ $toggle: ($size + $margin*2) * 1.5;
 				transition-delay: .0s;
 			}
 		}
+		@media (max-width:$md2+px){
+			margin: 0px 10px 0px 0px;
+		}
 	}
 
 	// .header__link
@@ -145,6 +159,9 @@ $toggle: ($size + $margin*2) * 1.5;
 		text-transform: capitalize;
 		&:hover{
 			color: #ffd723;
+		}
+		@media (max-width:$md2+px){
+			font-size: $size/2.8;
 		}
 	}
 }
