--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -97,7 +97,9 @@ body {
 	padding-top: 84px;
 	align-items: center;
 	margin-top: -100px;
-	
+	@media (max-width:$md1+px){
+		margin: 0px 0px 0px 0px;
+	}
 	
 
 	// .main__content
@@ -112,8 +114,14 @@ body {
 
 	&__body {
 		padding-top: 104px;
+		position: relative;
+		z-index: 3;
 		@media (max-width:$md1+px){
 			padding-top: 54px;
+		}
+		@media (max-width:$md4+px){
+			padding-top: 0;
+			text-align: center;
 		}
 	}
 
@@ -138,15 +146,18 @@ body {
 		font-weight: 700;
 		line-height: 74px;
 		margin-bottom: 35px;
-<<<<<<< HEAD
-		@media (max-width:$md1+px){
-			font-size: 50px;
-			margin-bottom: 20px;
-=======
 		@media (max-width:$md2+px){
 			font-size: 50px;
->>>>>>> 823e62a6df09f216fe2d7422d17e547d04cc40f6
+			margin-bottom: 20px;
 		}
+		@media (max-width:$md3+px){
+			line-height: 64px;
+		}
+		@media (max-width:$md4+px){
+			font-size: 40px;
+			line-height: 50px;
+		}
+		
 	}
 
 	// .main__submotto
@@ -171,27 +182,11 @@ body {
 		font-size: 16px;
 		font-weight: 700;
 		text-decoration: underline;
-		position: relative;
 		@media (min-width:$md3+px){
 			&:hover{
 				color: #fff;
-<<<<<<< HEAD
 			}
-=======
-			} 
->>>>>>> 823e62a6df09f216fe2d7422d17e547d04cc40f6
-		}
-	}
-	&__triangle {
-		position: absolute;
-		left: -15px;
-		top: 4px;
-		display: block;
-		width: 0;
-		height: 0;
-		border-top: 5px solid transparent;
-		border-right: 10px solid #ffd723;;
-		border-bottom: 5px solid transparent;
+		} 
 	}
 	&__bg {
 		position: absolute;
@@ -208,6 +203,12 @@ body {
 	box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.15);
 	border-radius: 2px;
 	margin: -20px 0 0 auto;
+	@media (max-width:$md1+px){
+		margin: 0px 0px 0px 0px;
+	}
+	@media (max-width:$md4+px){
+		min-height: 127px;
+	}
 	// .company__swiper
 
 	&__swiper {
@@ -218,6 +219,9 @@ body {
 
 	&__wrapper {
 		padding-top: 60px;
+		@media (max-width:$md4+px){
+			padding-top: 40px;
+		}
 	}
 
 	// .company__slide
@@ -229,6 +233,7 @@ body {
 
 	&__img {
 		img {
+			display: block;
 			max-width: 100%;
 		}
 	}
@@ -238,6 +243,9 @@ body {
 	// .servise__wrapper
 	&__wrapper {
 		display: flex;
+		@media (max-width:$md2+px){
+			flex-wrap: wrap;
+		}
 	}
 	&__content {
 		padding-bottom: 148px;
@@ -251,15 +259,26 @@ body {
 			height: 1px;
 			width: 100%;
 		}
+		@media (max-width:$md2+px){
+			padding-bottom: 80px;
+		}
 	}
 	// .servise__column
 
 	&__column {
 		flex: 0 0 50%;
+		@media (max-width:$md2+px){
+			flex: 0 0 100%;
+		}
 	}
 
 	&__info {
 		padding-top: 120px;
+		@media (max-width:$md2+px){
+			padding-top: 80px;
+			padding-left: 40px;
+			padding-bottom: 50px;
+		}
 	}
 	// .servise__title
 	&__marker {
@@ -313,6 +332,13 @@ body {
 		box-shadow: 0 100px 100px rgba(0, 0, 0, 0.15);
 		background-color: #ffffff;
 		padding: 119px 0px 60px 40px;
+		@media (max-width:$md2+px){
+			width: 700px;
+			margin: 0px auto;
+		}
+		@media (max-width:$md3+px){
+			width: 500px;
+		}
 	}
 	&__descr {
 		max-width: 426px;
